# ChangeLog for dev-ruby/declarative_authorization
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Oct 2013; Hans de Graaff <graaff@gentoo.org>
  -declarative_authorization-0.5.3.ebuild,
  -declarative_authorization-0.5.5.ebuild:
  Cleanup.

*declarative_authorization-0.5.6 (05 Oct 2012)

  05 Oct 2012; Hans de Graaff <graaff@gentoo.org>
  +declarative_authorization-0.5.6.ebuild:
  Version bump.

*declarative_authorization-0.5.5 (13 Apr 2012)

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org>
  +declarative_authorization-0.5.5.ebuild:
  Version bump.

*declarative_authorization-0.5.3 (04 Oct 2011)

  04 Oct 2011; Hans de Graaff <graaff@gentoo.org>
  +declarative_authorization-0.5.3.ebuild, +metadata.xml:
  Initial import.
