@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*declarative_authorization-0.5.7 (24 Oct 2013)
+
+  24 Oct 2013; Hans de Graaff <graaff@gentoo.org>
+  +declarative_authorization-0.5.7.ebuild:
+  Version bump.
+
   24 Oct 2013; Hans de Graaff <graaff@gentoo.org>
   -declarative_authorization-0.5.3.ebuild,
   -declarative_authorization-0.5.5.ebuild:
